@@ -1,5 +1,6 @@
 [tox]
-envlist=py26,py27,py32,py33,py27-xdist,py25
+envlist=py26,py27,py32,py33,external
+# py27-xdist causes problems with svn, py25 requires virtualenv==1.9.1
 #indexserver=
 #    default=http://pypi.testrun.org
 
